# classroom-qa

./: .gitignore  README.md  flake.nix  main.py  pyproject.toml
app/: auth.py  config.py  main.py  models.py  redis_client.py
app/routes/: admin.py  sse.py  student.py
app/services/: __init__.py  distribution.py
app/templates/: admin.html  admin_login.html  archives.html  base.html  pid_entry.html  student.html
nix/: module.nix  package.nix
tests/: conftest.py  test_auth.py  test_config.py  test_integration_complete_flow.py  test_integration_question_creation.py  test_integration_question_sse_flow.py  test_integration_sse.py  test_redis_client.py  test_selenium_button_highlighting.py  test_smoke.py  test_sse_simple.py
tests/test_routes/: test_admin.py  test_admin_distribution.py  test_archives.py  test_ask.py  test_export.py  test_pages.py  test_sse.py  test_student.py  test_student.py.bak
